Добавляет затемнение герою, тени кнопкам портфолио

--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
     </header>
     <main>
       <!-- Головна секція -->
+
       <section class="head-section">
-        <div class="container main-container">
-          <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="button-main" type="button">Замовити послугу</button>
+        <div class="overlay">
+          <div class="container main-container">
+            <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button-main" type="button">Замовити послугу</button>
+          </div>
         </div>
       </section>
+
       <!-- Секція переваги -->
       <section class="section">
         <div class="container">
