--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         </nav>
         <ul class="list list-contact">
           <li class="item-nav">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link decor-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="item-nav"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item-nav">
+            <a class="link dercor-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
