--- a/index.html
+++ b/index.html
@@ -61,24 +61,36 @@
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="list list-advantage">
             <li class="item-advantage">
+              <div class="svg-advantage">
+                <svg class="icon-advantage"><use href="img/icon.svg#icon-antenna-1"></use></svg>
+              </div>
               <h3 class="title-advantage">Увага до деталей</h3>
               <p class="advantage">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="item-advantage">
+              <div class="svg-advantage">
+                <svg class="icon-advantage"><use href="img/icon.svg#icon-clock-1"></use></svg>
+              </div>
               <h3 class="title-advantage">Пунктуальність</h3>
               <p class="advantage">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="item-advantage">
+              <div class="svg-advantage">
+                <svg class="icon-advantage"><use href="img/icon.svg#icon-diagram-1"></use></svg>
+              </div>
               <h3 class="title-advantage">Планування</h3>
               <p class="advantage">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="item-advantage">
+              <div class="svg-advantage">
+                <svg class="icon-advantage"><use href="img/icon.svg#icon-astronaut-1"></use></svg>
+              </div>
               <h3 class="title-advantage">Сучасні технології</h3>
               <p class="advantage">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -115,6 +127,60 @@
               <div class="team-name-container">
                 <h3 class="title-team">Ігор Дем'яненко</h3>
                 <p class="profession" lang="en">Product Designer</p>
+                <ul>
+                  <li>
+                    <a
+                      class="social-link"
+                      href=""
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="" width="20px" height="20px">
+                        <use href="img/icon.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href=""
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="" width="20px" height="20px">
+                        <use href="img/icon.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href=""
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="" width="20px" height="20px">
+                        <use href="img/icon.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link"
+                      href=""
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="" width="20px" height="20px">
+                        <use href="img/icon.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item-team">
