--- a/portfolio.html
+++ b/portfolio.html
@@ -139,31 +139,90 @@
     <!-- Підвал -->
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <!-- Лого -->
-        <a class="logo logo-footer" href="index.html"
-          ><span class="logo-part-1" lang="en">Web</span
-          ><span class="logo-part-3" lang="en">Studio</span></a
-        >
-        <address class="address">
-          <ul class="list">
-            <li class="item-link-addr">
+        <div class="footer-div-1">
+          <a class="logo logo-footer" href="index.html"
+            ><span class="logo-part-1" lang="en">Web</span
+            ><span class="logo-part-3" lang="en">Studio</span></a
+          >
+          <address class="address">
+            <ul class="list">
+              <li class="item-link-addr">
+                <a
+                  class="link-map"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Украінки, 26</a
+                >
+              </li>
+              <li class="item-link-addr">
+                <a class="link-adr-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="item-link-addr">
+                <a class="link-adr-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-div-2">
+          <h2>Приєднуйтесь</h2>
+          <ul class="list list-socials-icon">
+            <li>
               <a
-                class="link-map"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                class="social-link"
+                href="https://www.instagram.com/"
                 target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Украінки, 26</a
+                rel="noopener noreferrer"
+                aria-label="instagram"
               >
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="img/icon.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item-link-addr">
-              <a class="link-adr-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li>
+              <a
+                class="social-link"
+                href="https://twitter.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+              >
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="img/icon.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item-link-addr">
-              <a class="link-adr-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li>
+              <a
+                class="social-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+              >
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="img/icon.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Linkedin"
+              >
+                <svg class="social-icon" width="20px" height="20px">
+                  <use href="img/icon.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
