Задает высоту и ширину иконкам секция Приемущество в HTML

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           <ul class="list list-advantage">
             <li class="item-advantage">
               <div class="svg-advantage">
-                <svg class="icon-advantage"><use href="img/icon.svg#icon-antenna-1"></use></svg>
+                <svg class="icon-advantage" width="70px" height="70px">
+                  <use href="img/icon.svg#icon-antenna-1"></use>
+                </svg>
               </div>
               <h3 class="title-advantage">Увага до деталей</h3>
               <p class="advantage">
@@ -71,7 +73,9 @@
             </li>
             <li class="item-advantage">
               <div class="svg-advantage">
-                <svg class="icon-advantage"><use href="img/icon.svg#icon-clock-1"></use></svg>
+                <svg class="icon-advantage" width="70px" height="70px">
+                  <use href="img/icon.svg#icon-clock-1"></use>
+                </svg>
               </div>
               <h3 class="title-advantage">Пунктуальність</h3>
               <p class="advantage">
@@ -80,7 +84,9 @@
             </li>
             <li class="item-advantage">
               <div class="svg-advantage">
-                <svg class="icon-advantage"><use href="img/icon.svg#icon-diagram-1"></use></svg>
+                <svg class="icon-advantage" width="70px" height="70px">
+                  <use href="img/icon.svg#icon-diagram-1"></use>
+                </svg>
               </div>
               <h3 class="title-advantage">Планування</h3>
               <p class="advantage">
@@ -89,7 +95,9 @@
             </li>
             <li class="item-advantage">
               <div class="svg-advantage">
-                <svg class="icon-advantage"><use href="img/icon.svg#icon-astronaut-1"></use></svg>
+                <svg class="icon-advantage" width="70px" height="70px">
+                  <use href="img/icon.svg#icon-astronaut-1"></use>
+                </svg>
               </div>
               <h3 class="title-advantage">Сучасні технології</h3>
               <p class="advantage">
