Добавляет секцию Постоянные клиенты. Верстка и дизайн

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,16 +27,26 @@
             ><span class="logo-part-2" lang="en">Studio</span>
           </a>
           <ul class="list list-nav">
-            <li class="item-nav"><a class="link" href="./index.html">Студія</a></li>
-            <li class="item-nav"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item-nav"><a class="link current" href="./index.html">Студія</a></li>
+            <li class="item-nav"><a class="link" href="./portfolio.html">Портфоліо</a></li>
             <li class="item-nav"><a class="link" href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list list-contact">
           <li class="item-nav">
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg width="16px" height="12px">
+                <use href="/img/icon.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="item-nav"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item-nav">
+            <a class="link" href="tel:+380961111111">
+              <svg width="10px" height="16px">
+                <use href="/img/icon.svg#icon-tel"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
