--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
         </nav>
         <ul class="list list-contact">
           <li class="item-nav">
-            <a class="link decor-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg width="16px" height="12px">
+                <use href="/img/icon.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item-nav">
-            <a class="link dercor-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg width="10px" height="16px">
+                <use href="/img/icon.svg#icon-tel"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -383,6 +391,49 @@
                   </li>
                 </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="title-team-services">Постійні клієнти</h2>
+          <ul class="list list-client">
+            <li>
+              <a class="link link-client" href="#"
+                ><svg class="icon-client" width="106px" height="60px">
+                  <use href="/img/icon.svg#icon-Client-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="link link-client" href="#"
+                ><svg class="icon-client" width="106px" height="60px">
+                  <use href="/img/icon.svg#icon-Client-2"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="link link-client" href="#"
+                ><svg class="icon-client" width="106px" height="60px">
+                  <use href="/img/icon.svg#icon-Client-3"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="link link-client" href="#"
+                ><svg class="icon-client" width="106px" height="60px">
+                  <use href="/img/icon.svg#icon-Client-4"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="link link-client" href="#"
+                ><svg class="icon-client" width="106px" height="60px">
+                  <use href="/img/icon.svg#icon-Client-5"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="link link-client" href="#"
+                ><svg class="icon-client" width="106px" height="60px">
+                  <use href="/img/icon.svg#icon-Client-6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
