Финал. Чистит от лишнего.

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,102 +50,156 @@
         </ul>
       </div>
     </header>
-    
-      <!-- Секція портфоліо -->
 
+    <!-- Секція портфоліо -->
+    <main>
       <section class="section">
         <div class="container container-portfolio">
-        <!-- Прихований заголовок -->
-        <h1 class="visually-hidden">Портфоліо</h1>
-        <!-- Кнопки -->
-        <ul class="list list-btns">
-          <li class="item-btn"><button class="button-portfolio" type="button">Усі</button></li>
-          <li class="item-btn"><button class="button-portfolio" type="button">Веб-сайти</button></li>
-          <li class="item-btn"><button class="button-portfolio" type="button">Додатки</button></li>
-          <li class="item-btn"><button class="button-portfolio" type="button">Дизайн</button></li>
-          <li class="item-btn"><button class="button-portfolio" type="button">Маркетинг</button></li>
-        </ul>
-        <!-- Проекти -->
-        <ul class="list list-portfolio">
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project1.jpg" alt="Відкритий ноутбук" width="370" />
-              <div class="description-project"><h2 class="title-project">Технокряк</h2>
-              <p class="type-project">Веб-сайт</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project2.jpg" alt="Баскетболісти борються за м'яч" width="370" />
-              <div class="description-project"><h2 class="title-project">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="type-project">Дизайн</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project3.jpg" alt="Лого рибного ресторану" width="370" />
-              <div class="description-project"><h2 class="title-project">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="type-project">Додаток</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project4.jpg" alt="Навушники" width="370" />
-              <div class="description-project"><h2 class="title-project">Проєкт <span lang="en">Prime</span></h2>
-              <p class="type-project">Маркетинг</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project5.jpg" alt="Біла і помаранчева коробочки" width="370" />
-              <div class="description-project"><h2 class="title-project">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="type-project">Додаток</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project6.jpg" alt="Монітор настольного компьютера" width="370" />
-              <div class="description-project"><h2 class="title-project" lang="en">Inspiration has no Borders</h2>
-              <p class="type-project">Веб-сайт</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project7.jpg" alt="Відкритий жіночій журнал" width="370" />
-              <div class="description-project"><h2 class="title-project">Видання <span lang="en">Limited Edition</span></h2>
-              <p class="type-project">Дизайн</p></div>
-              </a
-            >
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project" src="img/project8.jpg" alt="Біла лейба товару на мотузці" width="370" />
-              <div class="description-project"><h2 class="title-project">Проєкт <span lang="en">LAB</span></h2>
-              <p class="type-project">Маркетинг</p></div>
+          <!-- Прихований заголовок -->
+          <h1 class="visually-hidden">Портфоліо</h1>
+          <!-- Кнопки -->
+          <ul class="list list-btns">
+            <li class="item-btn"><button class="button-portfolio" type="button">Усі</button></li>
+            <li class="item-btn">
+              <button class="button-portfolio" type="button">Веб-сайти</button>
+            </li>
+            <li class="item-btn">
+              <button class="button-portfolio" type="button">Додатки</button>
+            </li>
+            <li class="item-btn"><button class="button-portfolio" type="button">Дизайн</button></li>
+            <li class="item-btn">
+              <button class="button-portfolio" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <!-- Проекти -->
+          <ul class="list list-portfolio">
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project1.jpg"
+                  alt="Відкритий ноутбук"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project">Технокряк</h2>
+                  <p class="type-project">Веб-сайт</p>
+                </div>
               </a>
-          </li>
-          <li class="item-project">
-            <a class="link-project" href="#" target="_blank"
-              ><img class="img-project"
-                src="img/project9.jpg"
-                alt="Людина тримає кісті на клавіатурі ноутбука"
-                width="370"
-              />
-              <div class="description-project"><h2 class="title-project" lang="en">Growing Business</h2>
-              <p class="type-project">Додаток</p></div>
-              </a
-            >
-          </li>
-        </ul>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project2.jpg"
+                  alt="Баскетболісти борються за м'яч"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="type-project">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project3.jpg"
+                  alt="Лого рибного ресторану"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="type-project">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img class="img-project" src="img/project4.jpg" alt="Навушники" width="370" />
+                <div class="description-project">
+                  <h2 class="title-project">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="type-project">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project5.jpg"
+                  alt="Біла і помаранчева коробочки"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="type-project">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project6.jpg"
+                  alt="Монітор настольного компьютера"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project" lang="en">Inspiration has no Borders</h2>
+                  <p class="type-project">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project7.jpg"
+                  alt="Відкритий жіночій журнал"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project">Видання <span lang="en">Limited Edition</span></h2>
+                  <p class="type-project">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project8.jpg"
+                  alt="Біла лейба товару на мотузці"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="type-project">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="item-project">
+              <a class="link-project" href="#" target="_blank"
+                ><img
+                  class="img-project"
+                  src="img/project9.jpg"
+                  alt="Людина тримає кісті на клавіатурі ноутбука"
+                  width="370"
+                />
+                <div class="description-project">
+                  <h2 class="title-project" lang="en">Growing Business</h2>
+                  <p class="type-project">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
-     </main>
+    </main>
     <!-- Підвал -->
 
     <footer class="footer">
