--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
             ><span class="logo-part-2" lang="en">Studio</span>
           </a>
           <ul class="list list-nav">
-            <li class="item-nav"><a class="link current" href="./index.html">Студія</a></li>
-            <li class="item-nav"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item-nav"><a class="link" href="./index.html">Студія</a></li>
+            <li class="item-nav"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
             <li class="item-nav"><a class="link" href="">Контакти</a></li>
           </ul>
         </nav>
