--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
           <li class="item-nav">
             <a class="link" href="mailto:info@devstudio.com">
               <svg width="16px" height="12px">
-                <use href="/img/icon.svg#icon-mail"></use></svg
+                <use href="./img/icon.svg#icon-mail"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item-nav">
             <a class="link" href="tel:+380961111111">
               <svg width="10px" height="16px">
-                <use href="/img/icon.svg#icon-tel"></use></svg
+                <use href="./img/icon.svg#icon-tel"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
